resolve server deploy
